[package]
name = "luxeshare"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "luxeshare"

[features]
no-entrypoint = []
idl-build = []
cpi = []
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated-token", "token-interface"] }
pyth-sdk-solana = "0.9"
